--- a/styles/architect.css
+++ b/styles/architect.css
@@ -146,6 +146,19 @@
    color: #727272;
    margin-top: 2px;
 }
+/* Sponsor related style */
+.sponsor-info {
+   width: 540px;
+   margin: 50px auto;
+   text-align: center;
+}
+.sponsor-companies {
+   display: grid;
+   grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img {
+   filter: grayscale(100%);
+}
 
 
  /*responsive media*/
@@ -154,8 +167,20 @@
     .teams {
         flex-direction: column;
     }
-    .team-img {
+    .team-img 
+    .card-container
+    .sponsor-companies
+    {
         grid-template-columns: repeat(1, 1fr);
+    }
+    .card-container 
+    {
+      justify-items: center;
+      gap: 24px;
+    }
+    .sponsor-companies {
+      justify-content: center;
+      gap: 50px;
     }
     .our-feature {
         margin-left: 15px;
@@ -169,4 +194,10 @@
     .our-feature {
         margin: 25px auto;
     }
+    .sponsor-companies, .card-container{
+      grid-template-columns: repeat(2, 1fr);
+      gap: 50px;
+      justify-items: center;
+    }
+   
  }
